Photo get added
